/*
 * Copyright Â© 2020-2021 by Academia Sinica
 *
 * This file is part of SKISSM.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SKISSM is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SKISSM.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "InviteMsgProto";

import "skissm/E2eeAddress.proto";

message InviteMsg {
    uint32 version = 1;
    uint32 e2ee_pack_id = 2;
    string session_id = 3;
    skissm.E2eeAddress from = 4;
    skissm.E2eeAddress to = 5;
    bytes alice_identity_key = 6;
    repeated bytes pre_shared_keys = 7;
    uint32 bob_signed_pre_key_id = 8;
    uint32 bob_one_time_pre_key_id = 9;
}
